--- a/composer.json
+++ b/composer.json
@@ -24,6 +24,9 @@
 		"contao/core-bundle":"~3.0 || ~4.1",
 		"contao-community-alliance/composer-plugin":"~2.4 || ~3.0 || dev-hotfix/3.0.1"
 	},
+	"conflict":{
+		"contao-community-alliance/composer-plugin":"3.0.0"
+	},
     "replace": {
         "contao-legacy/inherit_article": "self.version"
     },
