--- a/composer.json
+++ b/composer.json
@@ -1,27 +1,29 @@
 {
-    "name":"fritzmg/contao-inherit-article",
-    "description":"Extension to allow inheritable page articles within Contao.",
-    "keywords":["contao", "article", "inherit"],
-    "type":"contao-bundle",
-    "homepage":"http://www.inspiredminds.at",
-    "license":"LGPL-3.0-or-later",
-    "authors":[
+    "name": "fritzmg/contao-inherit-article",
+    "description": "Extension to allow inheritable page articles within Contao.",
+    "keywords": ["contao", "article", "inherit"],
+    "type": "contao-bundle",
+    "license": "LGPL-3.0-or-later",
+    "authors": [
         {
-            "name":"Fritz Michael Gschwantner",
-            "homepage":"http://www.inspiredminds.at",
-            "email":"fmg@inspiredminds.at",
-            "role":"Developer"
+            "name": "Fritz Michael Gschwantner",
+            "homepage": "http://www.inspiredminds.at",
+            "email": "fmg@inspiredminds.at",
+            "role": "Developer"
         }
     ],
-    "support":{
-        "email":"fmg@inspiredminds.at",
-        "issues":"https://github.com/fritzmg/contao-inherit-article/issues",
-        "source":"https://github.com/fritzmg/contao-inherit-article",
-        "forum":"https://community.contao.org/de"
+    "support": {
+        "email": "fmg@inspiredminds.at",
+        "issues": "https://github.com/fritzmg/contao-inherit-article/issues",
+        "source": "https://github.com/fritzmg/contao-inherit-article",
+        "forum": "https://community.contao.org/de"
     },
-    "require":{
+    "require": {
         "php": ">=7.1",
-        "contao/core-bundle": "^4.4"
+        "contao/core-bundle": "^4.8",
+        "symfony/dependency-injection": "^3.4 || ^4.0",
+        "symfony/config": "^3.4 || ^4.0",
+        "symfony/http-kernel": "^3.4 || ^4.0"
     },
     "require-dev": {
          "contao/manager-plugin": "^2.0"
