--- a/composer.json
+++ b/composer.json
@@ -27,10 +27,9 @@
     "require": {
         "php": ">=7.1",
         "contao/core-bundle": "^4.4",
-        "symfony/dependency-injection": "^3.4 || ^4.4",
-        "symfony/config": "^3.4 || ^4.4",
-        "symfony/contracts": "^1.0 || ^2.0",
-        "symfony/http-kernel": "^3.4 || ^4.4"
+        "symfony/dependency-injection": "^3.4 || ^4.4 || ^5.1",
+        "symfony/config": "^3.4 || ^4.4 || ^5.1",
+        "symfony/http-kernel": "^3.4 || ^4.4 || ^5.1"
     },
     "require-dev": {
          "contao/manager-plugin": "^2.0"
