--- a/composer.json
+++ b/composer.json
@@ -26,13 +26,15 @@
     ],
     "require": {
         "php": ">=7.1",
-        "contao/core-bundle": "^4.4",
-        "symfony/dependency-injection": "^3.4 || ^4.4 || ^5.1",
-        "symfony/config": "^3.4 || ^4.4 || ^5.1",
-        "symfony/http-kernel": "^3.4 || ^4.4 || ^5.1"
+        "contao/core-bundle": "^4.4 || ^5.0",
+        "doctrine/dbal": "^2.11 || ^3.0",
+        "symfony/dependency-injection": "^3.4 || ^4.4 || ^5.1 || ^6.0",
+        "symfony/config": "^3.4 || ^4.4 || ^5.1 || ^6.0",
+        "symfony/http-kernel": "^3.4 || ^4.4 || ^5.1 || ^6.0"
     },
     "require-dev": {
-         "contao/manager-plugin": "^2.0"
+        "contao/manager-plugin": "^2.0",
+        "friendsofphp/php-cs-fixer": "^2.16 || ^3.0"
     },
     "autoload": {
         "psr-4": {
